--- a/index.html
+++ b/index.html
@@ -2206,7 +2206,12 @@ vfs/rbG7z8+vzl2n9Q1Pxp7brd/OV7s19vvy9R+EwCfO65lMY6eZ+v8AHDmq7w==
     </g>
 </svg>
           </div>
-          <div class="flag_text"></div>
+          <div class="flag desc">Чем мог быть награжден?</div>
+          <div class="meta">
+            <div class="name"></div>
+            <div class="years"></div>
+            <div class="text"></div>
+          </div>
         </div>
       </div>
       <div class="block_persons">
